--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -116,7 +116,7 @@ jobs:
 
         ./ci/pod/openfunction/build-function-image.sh
         make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
-        ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
+        ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
 
     - name: Start CI env (LAST_TEST)
       if: steps.test_env.outputs.type == 'last'
@@ -124,7 +124,7 @@ jobs:
         # generating SSL certificates for Kafka
         keytool -genkeypair -keyalg RSA -dname "CN=127.0.0.1" -alias 127.0.0.1 -keystore ./ci/pod/kafka/kafka-server/selfsigned.jks -validity 365 -keysize 2048 -storepass changeit
         make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
-        ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
+        ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
 
     - name: Install dependencies
       run: |
