--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -103,7 +103,7 @@ jobs:
 
           ./ci/pod/openfunction/build-function-image.sh
           make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
-          sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
+          sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
 
       - name: Start CI env (LAST_TEST)
         if: steps.test_env.outputs.type == 'last'
@@ -111,7 +111,7 @@ jobs:
           # generating SSL certificates for Kafka
           sudo keytool -genkeypair -keyalg RSA -dname "CN=127.0.0.1" -alias 127.0.0.1 -keystore ./ci/pod/kafka/kafka-server/selfsigned.jks -validity 365 -keysize 2048 -storepass changeit
           make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
-          sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh
+          sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
 
       - name: Linux Before install
         run: sudo ./ci/${{ matrix.os_name }}_runner.sh before_install
