--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -116,7 +116,9 @@ jobs:
             docker load --input docker-images-backup/apisix-images.tar
             make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             echo "loaded docker images"
-            [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after && echo "executed"
+            if [[ ${{ steps.test_env.outputs.type }} != first ]]; then
+              sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
+            fi
           fi
       - if: ${{ steps.cache-images.outputs.cache-hit != 'true' }}
         name: Linux launch services
@@ -126,10 +128,9 @@ jobs:
           make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
           [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
 
-          echo "start backing up"
-          echo test_type is ${{ steps.test_env.outputs.type }}
+          echo "start backing up, $(date)"
           bash ./ci/backup-docker-images.sh ${{ steps.test_env.outputs.type }}
-
+          echo "backup done, $(date)"
       - name: Start Dubbo Backend
         if: matrix.os_name == 'linux_openresty' && steps.test_env.outputs.type == 'plugin'
         run: |
