docs: shift workflow plugin to general category
Signed-off-by: Pratyay Banerjee <dev@neilblaze.live>
Co-Authored-By: 罗泽轩 <spacewanderlzx@gmail.com>
Co-Authored-By: Navendu Pottekkat <navendu@apache.org>

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -62,7 +62,8 @@
             "plugins/ext-plugin-pre-req",
             "plugins/ext-plugin-post-req",
             "plugins/ext-plugin-post-resp",
-            "plugins/inspect"
+            "plugins/inspect",
+            "plugins/workflow"
           ]
         },
         {
@@ -184,7 +185,6 @@
             "plugins/azure-functions",
             "plugins/openwhisk",
             "plugins/aws-lambda",
-            "plugins/workflow",
             "plugins/openfunction"
           ]
         },
