feat: add degraphql plugin
Thanks for @tzssangglass to provide the inital implementation.
Signed-off-by: spacewander <spacewanderlzx@gmail.com>

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -76,6 +76,7 @@
             "plugins/grpc-web",
             "plugins/fault-injection",
             "plugins/mocking",
+            "plugins/degraphql",
             "plugins/body-transformer"
           ]
         },
