--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -3,13 +3,13 @@ name: Doc Lint
 on:
   push:
     paths:
-      - "docs/**"
-      - "**/*.md"
+      - 'docs/**'
+      - '**/*.md'
   pull_request:
-    branches: [master, "release/**"]
+    branches: [master, 'release/**']
     paths:
-      - "docs/**"
-      - "**/*.md"
+      - 'docs/**'
+      - '**/*.md'
 
 permissions:
   contents: read
