feat: update ci env

--- a/ci/pod/docker-compose.plugin.yml
+++ b/ci/pod/docker-compose.plugin.yml
@@ -133,21 +133,25 @@ services:
 
   ## OpenLDAP
   openldap:
-    image: bitnami/openldap:2.5.8
+    image: bitnami/openldap:2.6
     environment:
+      - BITNAMI_DEBUG=yes
       - LDAP_ADMIN_USERNAME=amdin
       - LDAP_ADMIN_PASSWORD=adminpassword
       - LDAP_USERS=user01,user02
       - LDAP_PASSWORDS=password1,password2
+      - LDAP_GROUP=group01
       - LDAP_ENABLE_TLS=yes
       - LDAP_TLS_CERT_FILE=/certs/localhost_slapd_cert.pem
       - LDAP_TLS_KEY_FILE=/certs/localhost_slapd_key.pem
       - LDAP_TLS_CA_FILE=/certs/apisix.crt
+      - LDAP_EXTRA_SCHEMAS=cosine,inetorgperson,nis,memberof
     ports:
       - "1389:1389"
       - "1636:1636"
     volumes:
       - ./t/certs:/certs
+      - ./ci/pod/openldap/memberof.ldif:/opt/bitnami/openldap/etc/schema/memberof.ldif
 
 
   rocketmq_namesrv:
