feat: add plugin to list

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -434,6 +434,7 @@ plugins:                          # plugin list (sorted by priority)
   - authz-casbin                   # priority: 2560
   - authz-casdoor                  # priority: 2559
   - wolf-rbac                      # priority: 2555
+  - ldap-auth-advanced             # priority: 2540
   - ldap-auth                      # priority: 2540
   - hmac-auth                      # priority: 2530
   - basic-auth                     # priority: 2520
