docs: contribute Getting Started tutorials

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -2,8 +2,15 @@
   "version": "3.2.0",
   "sidebar": [
     {
-      "type": "doc",
-      "id": "getting-started"
+      "type": "category",
+      "label": "Getting Started",
+      "items": [
+        "getting-started/README",
+        "getting-started/configure-routes",
+        "getting-started/load-balancing",
+        "getting-started/key-authentication",
+        "getting-started/rate-limiting"
+      ]
     },
     {
       "type": "doc",
