feat: update licenserc

--- a/.licenserc.yaml
+++ b/.licenserc.yaml
@@ -47,6 +47,6 @@ header:
     - 't/plugin/authz-casbin'
     - 't/coredns'
     - 'autodocs/'
-    - 'docs/'
+    - 'docs/**/*.md'
 
   comment: on-failure
