--- a/t/chaos/utils/Dockerfile
+++ b/t/chaos/utils/Dockerfile
@@ -38,6 +38,8 @@ RUN set -x \
     && git config --global url.https://github.com/.insteadOf git://github.com/ \
     && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sudo sh -s -- -y \
     && source "$HOME/.cargo/env" \
+    && export CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse \
+    && export RUSTFLAGS="-C target-feature=-crt-static" # for musl cdylib \
     && make deps \
     && cp -v bin/apisix /usr/bin/ \
     && mv ../apisix /usr/local/apisix \
