--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,9 +118,12 @@ jobs:
           if [[ -f docker-images-backup/apisix-images.tar ]]; then
             [[ ${{ steps.test_env.outputs.type }} != first ]] && sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh before
             docker load --input docker-images-backup/apisix-images.tar
-            rm docker-images-backup/apisix-images.tar
-            make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             echo "loaded docker images"
+
+            # preserve storage space
+            rm docker-images-backup/apisix-images.tar
+
+            make ci-env-up project_compose_ci=ci/pod/docker-compose.${{ steps.test_env.outputs.type }}.yml
             if [[ ${{ steps.test_env.outputs.type }} != first ]]; then
               sudo ./ci/init-${{ steps.test_env.outputs.type }}-test-service.sh after
             fi
