--- a/.github/workflows/gm-cron.yaml
+++ b/.github/workflows/gm-cron.yaml
@@ -81,6 +81,10 @@ jobs:
             echo "type=last" >>$GITHUB_OUTPUT
           fi
 
+      - name: Free disk space
+        run: |
+          bash ./ci/free_disk_space.sh
+
       - name: Linux launch common services
         run: |
           make ci-env-up project_compose_ci=ci/pod/docker-compose.common.yml
@@ -160,8 +164,6 @@ jobs:
       - if: ${{ steps.cache-images.outputs.cache-hit != 'true' }}
         name: Save docker images
         run: |
-          # free disk space
-          bash ./ci/free_disk_space.sh
           echo "start backing up, $(date)"
           bash ./ci/backup-docker-images.sh ${{ steps.test_env.outputs.type }}
           echo "backup done, $(date)"
