--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -588,8 +588,8 @@ deployment:
   role_traditional:
     config_provider: etcd
   admin:
-    # admin_key required or not. Default value is true.
-    # Bypass the Admin API authentication by modifying this value to false if needed.
+    # Admin API authentication is enabled by default. 
+    # Set it false in the production environment will cause a serious security issue.
     # admin_key_required: true
 
     # Default token when use API to call for Admin API.
