--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -92,6 +92,7 @@ jobs:
       - name: Linux launch common services
         run: |
           make ci-env-up project_compose_ci=ci/pod/docker-compose.common.yml
+          sudo ./ci/init-common-test-service.sh
 
       - name: Cache images
         id: cache-images
