Revert "force compile openssl 3.0"
This reverts commit d6b17e3c256fd4ce85822ce6ddf946e0d043d8bf.

--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -69,6 +69,7 @@ jobs:
       - name: Toggle openssl compile
         id: test_ssl_env
         shell: bash
+        if: steps.cache-openssl.outputs.cache-hit != 'true'
         run: |
           echo "openssl3=yes" >>$GITHUB_OUTPUT
           echo "openssl3_prefix=$HOME" >>$GITHUB_OUTPUT
