--- a/.github/workflows/fips.yml
+++ b/.github/workflows/fips.yml
@@ -66,13 +66,18 @@ jobs:
           path: ~/openssl-3.0
           key: ${{ runner.os }}-${{ env.cache-name }}-${{ matrix.os_name }}
 
+      - name: set openssl prefix
+        id: set_openssl_prefix
+        shell: bash
+        run: |
+          echo "openssl3_prefix=$HOME" >>$GITHUB_OUTPUT
+
       - name: Toggle openssl compile
         id: test_ssl_env
         shell: bash
         if: steps.cache-openssl.outputs.cache-hit != 'true'
         run: |
           echo "openssl3=yes" >>$GITHUB_OUTPUT
-          echo "openssl3_prefix=$HOME" >>$GITHUB_OUTPUT
 
       - name: Extract test type
         shell: bash
