--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -53,4 +53,4 @@ jobs:
       - name: Check Chinese copywriting
         uses: ./.github/actions/autocorrect
         with:
-          args: autocorrect --lint --no-diff-bg-color ./docs/zh/latest/control-api.md
+          args: autocorrect --lint --no-diff-bg-color ./docs/zh/latest/*.md
