--- a/.github/workflows/doc-lint.yml
+++ b/.github/workflows/doc-lint.yml
@@ -48,7 +48,9 @@ jobs:
     timeout-minutes: 1
     steps:
       - uses: actions/checkout@v3
-      - name: Check Chinese copywriting
-        uses: huacnlee/autocorrect-action@v2.6.2
         with:
-          args: --lint --no-diff-bg-color docs/zh/latest/**.md
+          submodules: recursive
+      - name: Check Chinese copywriting
+        uses: ./.github/actions/autocorrect
+        with:
+          args: autocorrect --lint --no-diff-bg-color ./docs/zh/latest/
