--- a/ci/pod/docker-compose.plugin.yml
+++ b/ci/pod/docker-compose.plugin.yml
@@ -146,7 +146,7 @@ services:
   ## Grafana Loki
   loki:
     image: grafana/loki:2.8.0
-    command: -config.file=/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml -auth.enabled -querier.multi-tenant-queries-enabled
     ports:
       - "3100:3100"
     networks:
