ci: move the certificates to /t/certs/
Signed-off-by: Sn0rt <wangguohao.2009@gmail.com>

--- a/ci/pod/docker-compose.plugin.yml
+++ b/ci/pod/docker-compose.plugin.yml
@@ -317,6 +317,7 @@ services:
     container_name: vector
     volumes:
       - ./ci/pod/vector:/etc/vector/
+      - ./t/certs:/certs
     ports:
       - '3000:3000'
       - '43000:43000'
