ci: minor tweaks

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,9 @@ jobs:
         platform:
           - ubuntu-20.04
         os_name:
-          - linux_openresty
           - linux_openresty_1_19
         test_dir:
-          - t/plugin/[a-k]*
-          - t/plugin/[l-z]*
-          - t/admin t/cli t/config-center-yaml t/control t/core t/debug t/deployment t/discovery t/error_page t/misc
-          - t/node t/pubsub t/router t/script t/secret t/stream-node t/utils t/wasm t/xds-library t/xrpc
+          - t/admin
 
     runs-on: ${{ matrix.platform }}
     timeout-minutes: 90
